<resources>
    <!--Login fragment-->
    <string name="app_name">Bedu Shop</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="boton_sesion">INICIAR SESIÓN</string>
    <string name="registro">Registrate aquí</string>
    <string name="email_error">Debe ingresar un correo</string>
    <string name="email_match_error">Formato incorrecto de email</string>
    <string name="password_error">Debe ingresar un password</string>

    <!--Register fragment-->
    <string name="titulo_registro">Regístrate</string>
    <string name="nombre_registro">Nombre completo</string>
    <string name="telefono_registro">Teléfono</string>
    <string name="boton_registro">Registrarse</string>
    <string name="interlinea_registro">----- o -----</string>
    <string name="name_error">Debe ingresar un nombre</string>
    <string name="phone_error">Debe ingresar un teléfono</string>


    <!-- product_list_fragment -->
    <string name="product_list_title">Productos cerca de ti</string>

    <!--product_detail fragment-->
    <string name="product_detail_new">Nuevo</string>
    <string name="product_detail_financing">En 6 meses sin interés de</string>
    <string name="product_detail_address_delivery">Disponible en tu domicilio</string>
    <string name="product_detail_delivey">Entrega mañana</string>
    <string name="product_detail_add_cart_button">Agregar al carrito</string>

    <!--Bottom nav menu-->
    <string name="nav_home">Home</string>
    <string name="nav_cart">Carrito</string>
    <string name="nav_profile">Perfil</string>
    <!--General fragment-->
    <string name="hello_blank_fragment">Blank fragment</string>

    <!--User profile fragment-->

    <string name="userprofile_user_text">Usuario</string>
    <string name="userprofile_email_text">gaston@bedu.org</string>
    <string name="userprofile_logout">CERRAR SESIÓN</string>

    <!--User profile list item -->
    <string name="userprofile_item_text">Elemento 1</string>

    <!--    User profile navigation-->
    <string name="user_profile_navigation_add">Agregar dirección</string>
    <string name="user_profile_navigation_actual_address">Ubicación Actual</string>
    <string name="user_profile_navigation_actual_address_next">Juan Escutia 293, San Simón, Benito Juárez, 03660 Ciudad de México, CDMX, México Ciudad de México</string>
    <string name="user_profile_navigation_update_address">ACTUALIZAR</string>
    <string name="user_profile_navigation_extra_address_11">Av. Siempreviva 123</string>
    <string name="user_profile_navigation_extra_address_12">Springfield</string>
    <string name="user_profile_navigation_extra_address_21">Av. Inexistente 321</string>
    <string name="user_profile_navigation_extra_address_22">Ciudad de México</string>

    <!--    Shopping cart fragment-->
    <string name="shopping_cart_button">Proceder al pago</string>

    <!--   Datos de pago fragment -->

    <string name="paid_title">Datos de pago</string>
    <string name="paid_direction">Dirección actual</string>
    <string name="paid_method">Método de pago</string>
    <string name="paid_resume">Resumen</string>
    <string name="paid_subtotal">Subtotal</string>
    <string name="paid_subtotal_cuantity">$ 30000</string>
    <string name="paid_shipment">Envío</string>
    <string name="paid_shipment_cuantity">$ 30.00</string>
    <string name="paid_total">Total</string>
    <string name="paid_total_cuantity">$ 368.89</string>
    <string name="paid_pay_button">Pagar</string>

    <!--  Succesfull purchase fragment -->
    <string name="successfull_thanks">¡Gracias por su compra!</string>
    <string name="successfull_soon">Recibiras tu paquete pronto</string>
    <string name="successfull_button">Ir al menu principal</string>

    <!--  cart items -->
    <string name="cart_item_title">Titulo</string>
    <string name="cart_item_price">price</string>
    <string name="cart_item_cant">cant</string>

    <!--  Empty cart fragment  -->
    <string name="empty_cart_message">Su carrito está vacio</string>
    <string name="empty_cart_button">Llénelo ahora mismo</string>

    <!-- textos para la notificacion push -->
    <string name="notify_title">Compra realizada</string>
    <string name="notify_body">Tu pedido llegará en una semana</string>

    <!-- CANAL  -->
    <string name="channel_shopping">Compras</string>
    <string name="shopping_description">2 notifications per week</string>

</resources>