<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/fondo">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:id="@+id/bag_icon"
        android:src="@drawable/bolsa_bedu"
        android:layout_marginBottom="50dp"
        />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textColor="@color/naranja"-->
<!--        android:textFontWeight="400"-->
<!--        android:textSize="25dp" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/person"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        style="@style/BeduShop.TextInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:drawableStart="@drawable/person"
        android:drawablePadding="12dp"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        /-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="15dp"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:textColor="@color/naranja"-->
<!--        android:textFontWeight="400"-->
<!--        android:id="@+id/email_error"-->
<!--        />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        app:errorEnabled="true"
        android:hint="@string/password_hint"
        app:startIconDrawable="@drawable/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        style="@style/BeduShop.TextInputLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/naranja"
        android:textFontWeight="400"
        android:id="@+id/password_error"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_sesion"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/naranja"
        android:textColor="@color/white"
        android:id="@+id/boton_sesion"
        />

    <TextView
        android:id="@+id/link_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"

        />

</LinearLayout>