<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProductDetailFragment"
    android:fillViewport="true">

    <TextView
        android:id="@+id/productNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/product_detail_new"
        android:textFontWeight="1000"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="title"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/productNew" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_title" />

    <TextView
        android:id="@+id/product_detail_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:text="1234"
        android:textSize="9dp"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_title" />

    <ImageView
        android:id="@+id/product_detail_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:transitionName="product_transition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


    <TextView
        android:id="@+id/product_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="price"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />

    <TextView
        android:id="@+id/product_detail_financing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_detail_financing"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_price" />

    <TextView
        android:id="@+id/product_detail_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="share"
        android:textFontWeight="700"
        app:layout_constraintStart_toEndOf="@+id/product_detail_financing"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_price" />

    <ImageView
        android:id="@+id/product_detail_adress_delivery_ic"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_financing" />

    <TextView
        android:id="@+id/product_detail_adress_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/product_detail_address_delivery"
        android:textFontWeight="700"
        app:layout_constraintStart_toEndOf="@+id/product_detail_adress_delivery_ic"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_financing" />

    <ImageView
        android:id="@+id/product_detail_delivery_ic"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_car"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_adress_delivery_ic" />

    <TextView
        android:id="@+id/product_detail_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/product_detail_delivey"
        android:textFontWeight="700"
        app:layout_constraintStart_toEndOf="@+id/product_detail_delivery_ic"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_adress_delivery" />


    <Button
        android:id="@+id/product_detail_add_cart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/product_detail_add_cart_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/bedu_orange"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_delivery" />

    <TextView
        android:id="@+id/product_detail_description"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Description"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/product_detail_add_cart_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
<!--</ScrollView>-->